--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ Repository = "https://github.com/CVEProject/cvelistV5.git"
 
 [project.scripts]
 cvepoc = "cvepoc.main:main_cli"
-cvepoc-spark = "cvepoc.spark:main_cli"
+cvepoc-spark = "cvepoc.spark.main:main_cli"
 
 [project.optional-dependencies]
 spark = [
